# Wechat-Cococat

./: .gitignore  AGENT.md  CONTEXT.md  README.md  docker-compose.tencentdb-memory.yml  docker-compose.yml  escalation.json.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-cococat.cmd  turbo.json
.changeset/: config.json
agent-wechat-fork/: .gitattributes  .gitignore  AGENT.md  README.md  REFACTOR_STATUS.md  clear_context.sh  devbox.json  docker-compose.yml  entrypoint.sh  package.json  pnpm-lock.yaml  tsconfig.json
config/: agent.env.example  caption.env.example  persona.example.md  tencentdb-memory.env.example  wiki-default.json.example  wiki-registry.json.example
data/: bridge-groups.json.example  schedules.json.example
docker/: .dockerignore  Dockerfile  entrypoint.sh
docker/agent-server-rust/: Cargo.toml
docker/agent-server-rust/migrations/: V2__add_novnc_port.sql
docker/agent-server-rust/src/: events.rs
docker/agent-server-rust/src/context/: session_ctx.rs
docker/agent-server-rust/src/db/: mod.rs  queries.rs
docker/agent-server-rust/src/effects/: mod.rs
docker/agent-server-rust/src/execution/: mod.rs  rate_limiter.rs
docker/agent-server-rust/src/ia/: actions.rs  helpers.rs  selectors.rs  wechat_compose.rs
docker/agent-server-rust/src/ia/states/: chat.rs
docker/agent-server-rust/src/ia/states/test_fixtures/: chat_view.json
docker/agent-server-rust/src/plans/: login.rs  send_message.rs
docker/agent-server-rust/src/router/: events.rs  messages.rs  mod.rs  vnc.rs
docker/agent-server-rust/src/sessions/: health_monitor.rs  manager.rs
docker/agent-server-rust/src/tools/: screenshot.rs  wechat_artifacts.rs  wechat_chats.rs  wechat_contacts.rs  wechat_db.rs  wechat_media.rs  wechat_messages.rs
docker/agent-server-rust/tests/: fsm_tests.rs
docs/: PLAN-agent-queue.md  (+6 more)
(+582 files in other folders)
