[package]
name = "agent-server"
version = "0.11.15"
edition = "2021"

[lib]
name = "agent_server"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server + WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLite + SQLCipher bundled)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

# Database migrations
refinery = { version = "0.8", features = ["rusqlite"] }

# Image processing + QR
image = { version = "0.25", default-features = false, features = ["png"] }
rqrr = "0.8"
qrcode = "0.14"

# Zstandard decompression
zstd = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
md-5 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
regex = "1"
futures = "0.3"
tokio-stream = "0.1"

# For WebSocket streaming
async-stream = "0.3"

# (VNC proxy now uses raw TCP to x11vnc, no WebSocket-to-WebSocket bridging needed)

# HTTP client (avatar CDN proxy)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Async trait support
async-trait = "0.1"

# Cancellation
tokio-util = "0.7"

# TypeScript type generation
ts-rs = "10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "thin"        # Thin LTO (much less RAM than fat LTO)
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip debug symbols
